--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,19 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
+    bslib,
+    DT,
+    gamair,
+    ggplot2,
+    glue,
+    gratia,
+    marginaleffects,
+    markdown,
+    mgcv,
+    patchwork,
     pkgload,
-    shiny
+    rlang,
+    shiny,
+    vroom
+Depends: 
+    tidyverse
