--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,24 @@
 export(buildFamilyValue)
 export(buildModalDialog)
 export(buildSmooth)
+export(generateTeachBuildPage)
 export(getGamFamilies)
 export(getGamMethods)
 export(getSmoothClasses)
 export(getValidLinkFunction)
 export(loadMarkdown)
+export(run_app)
 export(studentServer)
+import(shiny)
+importFrom(bslib,accordion)
+importFrom(bslib,accordion_panel)
+importFrom(gratia,appraise)
+importFrom(gratia,basis)
+importFrom(gratia,smooths)
+importFrom(gratia,which_smooths)
+importFrom(marginaleffects,plot_comparisons)
+importFrom(marginaleffects,plot_predictions)
+importFrom(marginaleffects,plot_slopes)
 importFrom(shiny,bindEvent)
 importFrom(shiny,modalDialog)
 importFrom(shiny,showModal)
