--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,9 @@ export(studentServer)
 import(shiny)
 importFrom(bslib,accordion)
 importFrom(bslib,accordion_panel)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,theme_set)
 importFrom(gratia,appraise)
 importFrom(gratia,basis)
 importFrom(gratia,smooths)
@@ -24,3 +27,4 @@ importFrom(marginaleffects,plot_slopes)
 importFrom(shiny,bindEvent)
 importFrom(shiny,modalDialog)
 importFrom(shiny,showModal)
+importFrom(shiny,tabPanel)
