--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,16 +14,27 @@ export(studentServer)
 import(shiny)
 importFrom(bslib,accordion)
 importFrom(bslib,accordion_panel)
+importFrom(bslib,card)
+importFrom(bslib,card_header)
+importFrom(bslib,layout_column_wrap)
+importFrom(bslib,page_fluid)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_set)
+importFrom(graphics,lines)
 importFrom(gratia,appraise)
 importFrom(gratia,basis)
+importFrom(gratia,draw)
+importFrom(gratia,model_vars)
 importFrom(gratia,smooths)
 importFrom(gratia,which_smooths)
 importFrom(marginaleffects,plot_comparisons)
 importFrom(marginaleffects,plot_predictions)
 importFrom(marginaleffects,plot_slopes)
+importFrom(mgcv,gam)
+importFrom(mgcv,gam.check)
 importFrom(shiny,bindEvent)
 importFrom(shiny,modalDialog)
 importFrom(shiny,showModal)
