final commit before submission

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(generateTeachInterpretPage)
 export(generateTeachTabPanel)
 export(getGamFamilies)
 export(getGamMethods)
+export(getPlotSlopes)
 export(getSmoothClasses)
 export(getValidLinkFunction)
 export(loadMarkdown)
